@@ -20,6 +20,7 @@ External Authenticator Changelog
 - [BUGFIX]      Fix ticket #4313
 - [BUGFIX]	Various fixes. Thanks to Ben Gribaudo.
 - [ENHANCEMENT] Use clients IP address in authentication
+- [ENHANCEMENT] Dynamically map Source groups against Silverstripe groups
 
 0.3.1
 - [BUGFIX] Ticket #3649 - Syntax issue in LDAP driver
